--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,18 +1,42 @@
+@use "../abstracts" as *;
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 html {
-   font-family: 'Montserrat', sans-serif;
-   font-size: 62.5%; //Díky tomu 22px = 2.2rem
+   font-family: $font-family-primary;
+   font-weight: 400;
 }
 
-body {
-   font-size: 2.2rem;
+h1 {
+   color: $main-color;
+   font-family: $font-family-secondary;
+   font-size: $font-size-primary;
 }
 
-h2 {
-   font-size: 6.0rem;
-   font-weight: 500;
-   line-height: 7.5rem;
-   margin-bottom: 70px;
+h2,
+h2 a {
+   font-size: $font-size-secondary;
+   font-family: $font-family-secondary;
+   color: $main-color;
+   font-weight: 600;
+
+   :hover {
+      text-decoration: none;
+   }
+}
+
+p {
+   line-height: 1.5rem;
+}
+
+a {
+   color: $secondary-color;
+   text-decoration: none;
+   transition: 0.3s;
+   font-weight: 600;
+
+   :hover {
+      text-decoration: underline;
+   }
 }
