--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
-@use 'base';
-@use 'layout';
+@use 'abstracts' as *;
+@use 'base' as *;
+
 
 #root {
    display: flex;
@@ -8,10 +9,296 @@
    align-items: center;
 }
 
-.App {
-   max-height: 1600px;
+.more-link {
+   min-width: 100px;
+   min-height: 100px;
+   width: 100px;
+   height: 100px;
+   border: 3px solid $main-color;
+   border-radius: 50%;
+   display: block;
+   text-align: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: $main-color;
+   text-decoration: none;
+   font-size: 0.9rem;
+   text-transform: uppercase;
+
+   :hover {
+      background-color: $secondary-color;
+      color: $quaternary-color;
+      text-decoration: none;
+   }
 }
 
-p {
-   line-height: 3.0rem;
+.App {
+   max-width: 1200px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin: 0 auto;
+}
+
+
+
+/*Header*/
+#header {
+   height: $header-height;
+   display: flex;
+   background-color: $quaternary-color;
+   width: 100%;
+   position: fixed;
+   padding-top: 50px;
+   max-width: 1200px;
+}
+
+/*Logo*/
+#logo img {
+   height: auto;
+   width: 125px;
+}
+
+/*Menu*/
+#primary-menu {
+   display: flex;
+   width: calc(100% - 125px);
+   justify-content: center;
+}
+
+#primary-menu-container {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   width: 100%;
+
+   #social-media {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+
+      a:not(:last-child) {
+         margin-right: 15px;
+      }
+
+      img {
+         width: 20px;
+         height: auto;
+      }
+   }
+}
+
+#menu-mobile-toggle {
+   display: none;
+}
+
+#container-items {
+   width: calc(100% - 125px);
+   display: flex;
+   justify-content: center;
+
+   li {
+      display: inline-block;
+      text-transform: uppercase;
+
+      :not(:last-child) {
+         margin-right: 50px;
+      }
+
+      a {
+         color: $main-color;
+      }
+
+      a:hover {
+         color: $secondary-color;
+         text-decoration: none;
+      }
+   }
+}
+
+main {
+   margin-top: 150px;
+   max-width: 1200px;
+   width: 100%;
+}
+
+section {
+   float: left;
+   width: 100%;
+
+   >header {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      img {
+         width: 30px;
+         height: auto;
+      }
+   }
+
+   >header a {
+      color: $main-color;
+      text-transform: uppercase;
+      margin-left: 35px;
+   }
+}
+
+
+/*Introduction*/
+#introduction {
+   height: $full-screen-height;
+   min-height: 780px;
+   max-height: 780px;
+   width: $max-width;
+   width: 100%;
+   padding-top: 50px;
+   float: none;
+
+   .more-link {
+      float: right;
+   }
+}
+
+.row {
+   display: inline-block;
+   width: 100%;
+}
+
+.row-2 {
+   text-align: right;
+}
+
+.row-3 {
+   text-align: center;
+   padding-right: 100px;
+   ;
+}
+
+/*Projects*/
+section:not(#services) article {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   align-content: center;
+   height: $full-screen-height;
+   min-height: 780px;
+   max-height: 780px;
+   width: $max-width;
+   width: 100%;
+
+   .content {
+      margin-top: -150px;
+      width: 45%;
+   }
+
+   .thumbnail {
+      margin-top: -150px;
+      width: 55%;
+
+      img {
+         width: 100%;
+         height: auto;
+      }
+   }
+
+   .prefix {
+      padding: 35px 0 0 50px;
+
+      .more-link {
+         margin-top: 50px;
+         margin-left: -50px;
+      }
+   }
+
+   :nth-child(odd) {
+
+      .content {
+         padding-left: 50px;
+         order: 2;
+      }
+
+      .thumbnail {
+         padding-right: 50px;
+         order: 1;
+      }
+   }
+
+   :nth-child(even) {
+      .thumbnail {
+         padding-left: 50px;
+         order: 2;
+      }
+
+      .content {
+         padding-right: 50px;
+         order: 1;
+      }
+   }
+}
+
+/*Services*/
+#services {
+   height: $full-screen-height;
+   max-height: 780px;
+   min-height: 780px;
+   width: 1200px;
+   width: 100%;
+
+   >.content {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+
+      padding-top: 150px;
+   }
+
+   article {
+      max-width: 400px;
+      width: 33%;
+
+      :not(:last-child) {
+         padding-right: 50px;
+      }
+
+      .prefix {
+         padding-top: 50px;
+         display: flex;
+         flex-direction: column;
+         justify-content: space-between;
+         min-height: 250px;
+         max-height: 250px;
+      }
+
+      .more-link-small,
+      .prefix a {
+         width: 50px;
+         height: 50px;
+         min-width: 50px;
+         min-height: 50px;
+         margin-top: 50px;
+         font-size: 0.75rem;
+      }
+   }
+}
+
+/*Contact*/
+#contact {
+   align-content: center;
+   align-items: center;
+   display: flex;
+   flex-direction: row;
+   height: $full-screen-height;
+   max-height: 780px;
+   min-height: 780px;
+   width: 1200px;
+   width: 100%;
+   margin-top: -150px;
+
+   .contact {
+      background-color: #E7E8EC;
+      padding: 100px;
+      width: 100%;
+   }
 }
