--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,4 @@
-@use "../abstracts" as *;
+@use "../abstracts"as *;
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
@@ -12,6 +12,7 @@ h1 {
    color: $main-color;
    font-family: $font-family-secondary;
    font-size: $font-size-primary;
+   font-weight: 600;
 }
 
 h2,
@@ -36,7 +37,7 @@ a {
    transition: 0.3s;
    font-weight: 600;
 
-   :hover {
+   &:hover {
       text-decoration: underline;
    }
 }
