--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,6 +11,7 @@ sans-serif;
 
 $font-size-primary: 7.5rem;
 $font-size-secondary: 3.3rem;
+$font-size-tertiary: 1.125rem;
 
 $header-height: 150px;
 $full-screen-height: calc(100vh - 150px);
