--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @use 'abstracts'as *;
 @use 'base'as *;
+@use 'components'as *;
 @use 'pages'as *;
 
 
@@ -35,6 +36,7 @@
 }
 
 .App {
+   width: 100%;
    max-width: 1200px;
    display: flex;
    flex-direction: column;
@@ -251,7 +253,7 @@ section:not(#services) article {
       flex-direction: row;
       justify-content: flex-start;
 
-      padding-top: 150px;
+      padding-top: 100px;
    }
 
    article {
