--- a/src/styles/components/_contactForm.scss
+++ b/src/styles/components/_contactForm.scss
@@ -1,27 +1,60 @@
-@use "../abstracts"as *;
+@use "../abstracts" as *;
 
 form {
-   display: flex;
-   flex-direction: column;
-   align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
+  div,
+  span {
+    margin-bottom: 10px;
+  }
+
+  > div {
+    width: 100%;
+  }
+
+  h2 {
+    color: $quaternary-color;
+  }
+}
+
+input,
+textarea,
+button {
+  font-family: $font-family-primary;
+  padding: 10px 15px;
+  font-size: 1rem;
+  border: 2px solid #ffffff;
 }
 
 input,
 textarea {
-   padding: 10px 15px;
-   font-size: 1rem;
-   border: 2px solid #ffffff;
-   margin-bottom: 10px;
-   min-width: 350px;
-   width: 100%;
+  margin-bottom: 10px;
+  width: 100%;
+  color: $main-color;
+}
+
+textarea {
+  min-height: 100px;
 }
 
 button {
-   background: none;
-   color: #ffffff;
-   border: 2px solid #ffffff;
-   font-weight: bold;
-   padding: 10px 15px;
-   font-size: 1rem;
-   font-family: $font-family-primary;
+  background: none;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
+
+  &:hover {
+    background: #ffffff1a;
+  }
+}
+
+.validation {
+  display: block;
+  color: red;
+  margin-top: -40px;
+  text-align: right;
+  padding-right: 15px;
+  min-height: 20px;
 }
