--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,318 +1,363 @@
-@use 'abstracts'as *;
-@use 'base'as *;
-@use 'components'as *;
-@use 'pages'as *;
-
+@use "abstracts" as *;
+@use "base" as *;
+@use "components" as *;
+@use "pages" as *;
 
 #root {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .more-link {
-   min-width: 100px;
-   min-height: 100px;
-   width: 100px;
-   height: 100px;
-   border: 3px solid $main-color;
-   border-radius: 50%;
-   display: block;
-   text-align: center;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   color: $main-color;
-   text-decoration: none;
-   font-size: 0.9rem;
-   text-transform: uppercase;
+  min-width: 100px;
+  min-height: 100px;
+  width: 100px;
+  height: 100px;
+  border: 3px solid $main-color;
+  border-radius: 50%;
+  display: block;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $main-color;
+  text-decoration: none;
+  font-size: 0.9rem;
+  text-transform: uppercase;
 
-   &:hover {
-      background-color: $secondary-color;
-      color: $quaternary-color;
-      text-decoration: none;
-   }
+  &:hover {
+    background-color: $secondary-color;
+    color: $quaternary-color;
+    text-decoration: none;
+  }
 }
 
 .App {
-   width: 100%;
-   max-width: 1200px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
 }
-
-
 
 /*Header*/
 #header {
-   height: $header-height;
-   display: flex;
-   background-color: $quaternary-color;
-   width: 100%;
-   position: fixed;
-   padding-top: 50px;
-   max-width: 1200px;
+  height: $header-height;
+  display: flex;
+  background-color: $quaternary-color;
+  width: 100%;
+  position: fixed;
+  padding-top: 50px;
+  max-width: 1200px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 /*Logo*/
 #logo img {
-   height: auto;
-   width: 125px;
+  height: auto;
+  width: 125px;
 }
 
 /*Menu*/
 #primary-menu {
-   display: flex;
-   width: calc(100% - 125px);
-   justify-content: center;
+  display: flex;
+  width: calc(100% - 125px);
+  justify-content: center;
 }
 
 #primary-menu-container {
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
 
-   #social-media {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
+  #social-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 
-      a:not(:last-child) {
-         margin-right: 15px;
-      }
+    a:not(:last-child) {
+      margin-right: 15px;
+    }
 
-      img {
-         width: 20px;
-         height: auto;
-      }
-   }
+    img {
+      width: 20px;
+      height: auto;
+    }
+  }
 }
 
 #menu-mobile-toggle {
-   display: none;
+  display: none;
 }
 
 #container-items {
-   width: calc(100% - 125px);
-   display: flex;
-   justify-content: center;
+  width: calc(100% - 125px);
+  display: flex;
+  justify-content: center;
 
-   li {
-      display: inline-block;
-      text-transform: uppercase;
+  ul {
+    margin: 0;
+    padding: 0;
+  }
 
-      &:not(&:last-child) {
-         margin-right: 50px;
-      }
+  li {
+    display: inline-block;
+    text-transform: uppercase;
 
-      a {
-         color: $main-color;
-      }
+    &:not(&:last-child) {
+      margin-right: 50px;
+    }
 
-      a:hover {
-         color: $secondary-color;
-         text-decoration: none;
-      }
-   }
+    a {
+      color: $main-color;
+    }
+
+    a:hover {
+      color: $secondary-color;
+      text-decoration: none;
+    }
+  }
 }
 
 main {
-   margin-top: 150px;
-   max-width: 1200px;
-   width: 100%;
+  margin-top: 150px;
+  max-width: 1200px;
+  width: 100%;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 section {
-   float: left;
-   width: 100%;
+  float: left;
+  width: 100%;
 
-   >header {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
+  > header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
-      img {
-         width: 30px;
-         height: auto;
-      }
-   }
+    img {
+      width: 30px;
+      height: auto;
+    }
+  }
 
-   >header a {
-      color: $main-color;
-      text-transform: uppercase;
-      margin-left: 35px;
-   }
+  > header a {
+    color: $main-color;
+    text-transform: uppercase;
+    margin-left: 35px;
+  }
 }
-
 
 /*Introduction*/
 #introduction {
-   height: $full-screen-height;
-   min-height: 780px;
-   max-height: 780px;
-   width: $max-width;
-   width: 100%;
-   padding-top: 50px;
-   float: none;
+  height: $full-screen-height;
+  min-height: 700px;
+  max-height: 780px;
+  width: $max-width;
+  width: 100%;
+  padding-top: 50px;
+  float: none;
 
-   .more-link {
-      float: right;
-   }
+  .more-link {
+    float: right;
+  }
+
+  @include bp-medium {
+    min-height: auto;
+  }
 }
 
 .row {
-   display: inline-block;
-   width: 100%;
+  display: inline-block;
+  width: 100%;
 }
 
 .row-2 {
-   text-align: right;
+  text-align: right;
 }
 
 .row-3 {
-   text-align: center;
-   padding-right: 100px;
-   ;
+  text-align: center;
+  padding-right: 100px;
 }
 
 /*Projects*/
 section:not(#services) article {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   align-content: center;
-   height: $full-screen-height;
-   min-height: 780px;
-   max-height: 780px;
-   width: $max-width;
-   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  height: $full-screen-height;
+  //min-height: 780px;
+  max-height: 780px;
+  width: $max-width;
+  width: 100%;
 
-   .content {
-      margin-top: -150px;
-      width: 45%;
-   }
+  .content {
+    margin-top: -150px;
+    width: 45%;
 
-   .thumbnail {
-      margin-top: -150px;
-      width: 55%;
+    @include bp-large {
+      margin-top: 0;
+      padding: 25px 0;
+      width: 100%;
+    }
+  }
 
-      img {
-         width: 100%;
-         height: auto;
-      }
-   }
+  .thumbnail {
+    margin-top: -150px;
+    width: 55%;
 
-   .excerpt {
-      padding: 35px 0 0 50px;
-   }
+    img {
+      width: 100%;
+      height: auto;
+    }
 
-   .more-link {
+    @include bp-large {
       margin-top: 50px;
-   }
+    }
 
-   &:nth-child(odd) {
+    @include bp-small {
+      width: 100%;
+    }
+  }
 
-      .content {
-         padding-left: 50px;
-         order: 2;
+  .excerpt {
+    padding: 35px 0 0 50px;
+  }
+
+  .more-link {
+    margin-top: 50px;
+  }
+
+  &:nth-child(odd) {
+    .content {
+      padding-left: 50px;
+      order: 2;
+
+      @include bp-large {
+        padding-left: 0;
       }
+    }
 
-      .thumbnail {
-         padding-right: 50px;
-         order: 1;
-      }
-   }
+    .thumbnail {
+      padding-right: 50px;
+      order: 1;
 
-   &:nth-child(even) {
-      .thumbnail {
-         padding-left: 50px;
-         order: 2;
+      @include bp-large {
+        padding-right: 0;
       }
+    }
+  }
 
-      .content {
-         padding-right: 50px;
-         order: 1;
+  &:nth-child(even) {
+    .thumbnail {
+      padding-left: 50px;
+      order: 2;
+
+      @include bp-large {
+        padding-left: 0;
+        order: 1;
       }
-   }
+    }
+
+    .content {
+      padding-right: 50px;
+      order: 1;
+
+      @include bp-large {
+        padding-right: 0px;
+      }
+    }
+  }
+
+  @include bp-large {
+    flex-direction: column;
+    align-items: flex-start;
+    min-height: auto;
+    height: auto;
+  }
 }
 
 /*Services*/
 #services {
-   height: $full-screen-height;
-   max-height: 780px;
-   min-height: 780px;
-   width: 1200px;
-   width: 100%;
+  height: $full-screen-height;
+  max-height: 780px;
+  min-height: 780px;
+  width: 1200px;
+  width: 100%;
 
-   >.content {
+  > .content {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+
+    padding-top: 100px;
+  }
+
+  article {
+    max-width: 400px;
+    width: 33%;
+
+    &:not(&:last-child) {
+      padding-right: 50px;
+    }
+
+    .excerpt {
+      padding-top: 50px;
       display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 150px;
+      max-height: 150px;
+    }
 
-      padding-top: 100px;
-   }
-
-   article {
-      max-width: 400px;
-      width: 33%;
-
-      &:not(&:last-child) {
-         padding-right: 50px;
-      }
-
-      .excerpt {
-         padding-top: 50px;
-         display: flex;
-         flex-direction: column;
-         justify-content: space-between;
-         min-height: 150px;
-         max-height: 150px;
-      }
-
-      .more-link-small,
-      .more-link {
-         width: 50px;
-         height: 50px;
-         min-width: 50px;
-         min-height: 50px;
-         margin-top: 50px;
-         font-size: 0.75rem;
-      }
-   }
+    .more-link-small,
+    .more-link {
+      width: 50px;
+      height: 50px;
+      min-width: 50px;
+      min-height: 50px;
+      margin-top: 50px;
+      font-size: 0.75rem;
+    }
+  }
 }
 
 /*Contact*/
 #contact {
-   align-content: center;
-   align-items: center;
-   display: flex;
-   flex-direction: row;
-   height: $full-screen-height;
-   max-height: 780px;
-   min-height: 780px;
-   width: 1200px;
-   width: 100%;
-   margin-top: -150px;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  height: $full-screen-height;
+  max-height: 780px;
+  min-height: 780px;
+  width: 1200px;
+  width: 100%;
+  margin-top: -150px;
 
-   .contact {
-      background-color: #E7E8EC;
-      padding: 100px;
-      width: 100%;
-   }
+  .contact {
+    background-color: #e7e8ec;
+    padding: 100px;
+    width: 100%;
+  }
 }
 
 /*Loader*/
 #loading {
-   height: 100vh;
-   width: 100vh;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   font-size: $font-size-secondary;
-   font-family: $font-family-secondary;
-   font-weight: 600;
+  height: 100vh;
+  width: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: $font-size-medium;
+  font-family: $font-family-secondary;
+  font-weight: 600;
 }
