--- a/src/styles/pages/_pageContact.scss
+++ b/src/styles/pages/_pageContact.scss
@@ -1,24 +1,55 @@
-@use "../abstracts"as *;
+@use "../abstracts" as *;
 
 .page-contact main {
-   display: flex;
-   justify-content: space-between;
-   margin-top: 250px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 200px;
+  margin-bottom: 150px;
 
-   h1 {
-      font-size: $font-size-secondary;
-   }
+  .message {
+    padding-bottom: 100px;
+  }
 
-   .contact-text {
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-   }
+  h1 {
+    font-size: $font-size-medium;
+  }
 
-   .contact-form {
-      background-color: #0040fe;
-      padding: 50px;
-      min-width: 50%;
-   }
+  .contact-text {
+    width: 40%;
+
+    > div {
+      margin: 0 auto;
+      width: fit-content;
+
+      @include bp-medium {
+        margin: initial;
+      }
+    }
+
+    @include bp-medium {
+      width: 100%;
+      padding-bottom: 50px;
+    }
+
+    @include bp-small {
+      padding-left: 0;
+    }
+  }
+
+  .contact-form {
+    background-color: #0040fe;
+    padding: 50px;
+    min-width: 50%;
+    max-width: 60%;
+    min-height: 420px;
+
+    @include bp-medium {
+      max-width: 100%;
+    }
+  }
+
+  @include bp-medium {
+    flex-direction: column;
+  }
 }
