--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,13 +1,31 @@
-@mixin roundedBorder {
+@mixin borderRounded {
+  //background: none;
   border: 3px solid;
-  border-color: $main-color;
   border-radius: 50%;
+  font-weight: bold;
+  border-color: #000000;
+}
+
+@mixin borderRoundedWhite {
+  border-color: #ffffff;
+  color: #ffffff;
+  text-shadow: 0 0 0 #ffffff;
 }
 
 @mixin fullWidth {
   min-width: 100%;
   width: 100%;
   display: inline-block;
+}
+
+@mixin flexCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@mixin nulledHeight {
+  width: auto;
+  min-width: auto;
 }
 /*
 @mixin bp-small {
