--- a/src/styles/pages/_article.scss
+++ b/src/styles/pages/_article.scss
@@ -5,7 +5,10 @@ article {
     margin: 0 auto;
     padding: 75px 0;
     max-width: 960px;
-    margin: 0 auto;
+
+    @include bp-large {
+      padding: 25px 0;
+    }
   }
 
   h1 {
