--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,13 +61,6 @@
   }
 }
 
-/*Logo*/
-#logo svg {
-  height: auto;
-  width: 125px;
-  margin-top: -12px;
-}
-
 main {
   margin-top: 150px;
   max-width: 1200px;
@@ -134,7 +127,7 @@ section {
 
 .row-3 {
   text-align: center;
-  padding-right: 100px;
+  padding-right: clamp(0px, 10vw, 6.25rem);
 }
 
 /*Projects*/
@@ -233,6 +226,7 @@ section#projects article {
     align-items: flex-start;
     min-height: auto;
     height: auto;
+    max-height: unset;
   }
 }
 
@@ -334,16 +328,4 @@ section#projects article {
 
   @include bp-small {
   }
-}
-
-/*Loader*/
-#loading {
-  height: 100vh;
-  width: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: $font-size-medium;
-  font-family: $font-family-secondary;
-  font-weight: 600;
 }
