--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -32,15 +32,15 @@ p {
   line-height: 1.6rem;
 }
 
-a {
+a, button {
   color: $secondary-color;
   text-decoration: none;
   font-weight: 600;
   transition: 0.4s;
+}
 
-  &:hover {
-    text-decoration: underline;
-  }
+a:hover {
+  text-decoration: underline;
 }
 
 ul {
