--- a/src/styles/pages/_pageServices.scss
+++ b/src/styles/pages/_pageServices.scss
@@ -34,7 +34,7 @@
         width: 100%;
       }
     }
-    .content .content {
+    .content {
       @include bp-large {
         padding: 50px 0;
       }
@@ -43,7 +43,6 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      padding-top: 100px;
       flex-wrap: wrap;
     }
   }
