Přidán .env soubor. Změněy adresy API.

--- a/src/styles/components/_mainMenu.scss
+++ b/src/styles/components/_mainMenu.scss
@@ -15,6 +15,7 @@
   height: 40px;
   margin-top: -15px;
   padding: 0;
+  border: none;
   
   @include backgroundCenter;
 }
@@ -22,7 +23,6 @@
 button {
   background-size: auto 20px;
 
-  @include borderRounded;
   @include backgroundCenter;
   transition: none;
 }
