--- a/src/styles/pages/_pageServices.scss
+++ b/src/styles/pages/_pageServices.scss
@@ -1,6 +1,6 @@
 @use "../abstracts" as *;
 
-.page-services {
+/*.page-services {
   #services {
     @include bp-medium {
       padding-top: 0;
@@ -44,6 +44,30 @@
       flex-direction: row;
       justify-content: flex-start;
       flex-wrap: wrap;
+    }
+  }
+}
+*/
+
+.page-services {
+  
+  #services {
+    padding-bottom: 150px;
+    
+    @include nulledHeight;
+
+    > .content {
+        padding-top: 0;
+    }
+
+    article {
+        width: 50%;
+        max-width: unset;
+        padding-right: 80px;
+
+        @include bp-small {
+          width: 100%;
+        }
     }
   }
 }
