--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -282,7 +282,7 @@ section#projects article {
     .content {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: flex-start;
       height: 100%;
     }
 
