--- a/src/styles/pages/_pageServices.scss
+++ b/src/styles/pages/_pageServices.scss
@@ -68,6 +68,7 @@
         @include bp-small {
           width: 100%;
           padding-right: 0;
+          padding-bottom: 35px;
         }
     }
   }
